# tortuise

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
scripts/: sog_convert.py  supersplat-dl.sh
shaders/: bitonic_sort.metal  projection.metal  radix_sort.metal  rasterize.metal  tile_ops.metal
src/: camera.rs  demo.rs  input.rs  main.rs  splat.rs  terminal_setup.rs
src/input/: mod.rs  state.rs
src/parser/: dot_splat.rs  mod.rs  ply.rs
src/render/: frame.rs  frame_halfblock.rs  hud.rs  metal.rs  mod.rs  pipeline.rs  rasterizer.rs
src/render/metal/: buffers.rs  mod.rs  pipeline.rs  render.rs  render_attempt.rs  types.rs
src/render/modes/: ascii.rs  block_density.rs  braille.rs  halfblock.rs  matrix.rs  mod.rs  point_cloud.rs
