[package]
name = "gaussian-splat"
version = "0.1.0"
edition = "2021"

[features]
default = []
metal = ["dep:metal", "dep:objc"]

[dependencies]
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
rand = "0.9"
rayon = "1.10"
metal = { version = "0.29", optional = true }
objc = { version = "0.2", optional = true }

[profile.release]
opt-level = 3
